# tendermint-sol

./: .gitignore  .solhint.json  Makefile  README.md  package-lock.json  package.json  truffle-config.js
contracts/: Migrations.sol  TendermintLightClient.sol  package.json
contracts/ibc/: IBCChannel.sol  IBCClient.sol  IBCConnection.sol  IBCHandler.sol  IBCHost.sol  IBCIdentifier.sol  IBCModule.sol  IBCMsgs.sol  IClient.sol
contracts/ics23/: ics23.sol  ics23Compress.sol  ics23Ops.sol  ics23Proof.sol
contracts/mocks/: Ed25519Mock.sol  MerkleTreeMock.sol  ProtoMock.sol  Secp256k1.sol  TendermintMock.sol
contracts/proto/: Channel.sol  Connection.sol  Encoder.sol  ProtoBufRuntime.sol  TendermintHelper.sol  TendermintLight.sol  proofs.sol
contracts/utils/: Bytes.sol  Tendermint.sol
migrations/: 2_deploy_contracts.js  3_initialize_contract.js
proto/: TendermintLight.proto
proto/ibc/: Channel.proto
proto/ics23/: proofs.proto
scripts/: confgen.js  deploy_with_stats.sh  fix_test_data.sh  getAccount.js  import_ibc.sh  import_ics23.sh  protobuf_compile.sh
scripts/template/: contract.rs.tpl
test/: Proto.test.js  TendermintLightClient.js  TendermintLightClient.test.js  lib.js
test/data/: header.28.signed_header.json  header.29.signed_header.json  header.29.validator_set.json  header.30.signed_header.json  header.8512856.signed_header.json  header.8512856.validator_set.json  header.8512857.signed_header.json  header.8512858.signed_header.json  header.8619996.signed_header.json  header.8619996.validator_set.json  (+4 more)
test/demo/: Cargo.toml  build.rs
test/demo/src/: abci.rs  consts.rs  eth.rs  main.rs  mod.rs  proto.rs  types.rs  util.rs
(+7 files in other folders)
