[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web3 = { path = "../rust-web3" }
web3 = "0.17.0"
tokio = "1"
hex = "0.4.3"
serde_json = "1.0"
serde = "1.0"
ethabi = "14.1.0"
#ethers = { git = "https://github.com/gakonst/ethers-rs" , features = ["celo"]}
tonic  = "0.4.0"
prost = "0.7.0"
prost-types = "0.7.0"
tendermint-rpc = { version = "0.18", features = ["websocket-client"], default-features = false }
tendermint = { version = "0.18", default-features = false }
ibc = "0.7.0"
futures = "0.3.5"
tendermint-proto = "0.21.0"
prost-helper = "0.2.0"

[build-dependencies]
tonic-build = "0.4.0"
prost-serde = "0.2.0"
serde_json = "1.0"
serde = "1.0"
