[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = "1"
hex = "0.4.3"
serde_json = "1.0"
serde = "1.0"
ethabi = "14.1.0"
tonic  = "0.4.0"
prost = "0.9.0"
prost-types = "0.9.0"
tendermint-rpc = { version = "0.23", features = ["websocket-client", "http-client"], default-features = false }
tendermint = { version = "0.23", default-features = false }
ibc = "0.7.0"
futures = "0.3.5"
tendermint-proto = "0.23"
prost-helper = "0.2.0"
clap = "2.33.3"
secp256k1 = { version = "0.20.3", features = ["rand-std"] }

[build-dependencies]
tonic-build = "0.4.0"
prost-serde = "0.2.0"
serde_json = "1.0"
serde = "1.0"
